Update annotations for screens
