# ProcessMaker/Http/Controllers/Api/ScreenController.php
@@ -56,7 +56,7 @@ class ScreenController extends Controller
      *             @OA\Property(
      *                 property="meta",
      *                 type="object",
-     *                 allOf={@OA\Schema(ref="#/components/schemas/metadata")},
+     *                 @OA\Schema(ref="#/components/schemas/metadata"),
      *             ),
      *         ),
      *     ),
@@ -173,7 +173,7 @@ class ScreenController extends Controller
      *  @OA\Post(
      *     path="/screens",
      *     summary="Save a new screens",
-     *     operationId="createScreens",
+     *     operationId="createScreen",
      *     tags={"Screens"},
      *     @OA\RequestBody(
      *       required=true,
@@ -385,7 +385,9 @@ class ScreenController extends Controller
      *     @OA\Response(
      *         response=201,
      *         description="success",
-     *         @OA\JsonContent(ref="#/components/schemas/screens")
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="object"),
+     *         )
      *     ),
      *     @OA\RequestBody(
      *         required=true,
@@ -393,12 +395,11 @@ class ScreenController extends Controller
      *             mediaType="multipart/form-data",
      *             @OA\Schema(
      *                 @OA\Property(
-     *                     description="file to upload",
      *                     property="file",
-     *                     type="file",
-     *                     format="file",
+     *                     description="file to import",
+     *                     type="string",
+     *                     format="binary",
      *                 ),
-     *                 required={"file"}
      *             )
      *         )
      *     ),
